# cmake-reflection-template

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
scripts/: parse_source.py  utils.cmake
src/: common.h  foo.h  main.cpp
